config-root/namespaces/jx-staging/election-web-app/election-web-app-ingress.yaml
# Source: election-web-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'election-web-app'
  name: election-web-app
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: election-web-app
                port:
                  number: 80
      host: election-web-app-jx-staging.3.10.77.173.nip.io
